--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import 'login';
+@import 'signup';
+@import 'footer';
+@import 'landingP';
+@import 'navbar';
