--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -12,9 +12,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; // Full viewport height
-  background: #f5f5f5; // Light gray background
+  height: 100vh;
+  background: url('/images/blurbg.png') no-repeat center center/cover;
 }
+
 
 .login-container {
   background: #FFF;
