--- a/resources/sass/signup.scss
+++ b/resources/sass/signup.scss
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh; // Full viewport height
-  background: #f5f5f5; // Light gray background
+  background: url('/images/blurbg.png') no-repeat center center/cover;
 }
 
 .signup-container {
