--- a/resources/sass/signup.scss
+++ b/resources/sass/signup.scss
@@ -47,7 +47,7 @@
     }
 
     input {
-      width: 100%;
+      width: 483px;
       padding: 0.5rem;
       border: none;
       border-bottom: 2px solid #9C9C9C;
@@ -99,7 +99,8 @@
   }
 
   .signup-button {
-    width: 100%;
+    width: 483px;
+    height: 48px;
     background: black;
     color: white;
     padding: 0.75rem;
