--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -48,7 +48,7 @@
     }
 
     input {
-      width: 100%;
+      width: 483px;
       padding: 0.5rem;
       border: none;
       border-bottom: 2px solid #9C9C9C;
@@ -116,7 +116,7 @@
   }
 
   .login-button {
-    width: 100%;
+    width: 483px;
     background: black;
     color: white;
     padding: 0.75rem;
